src/OpenCvSharp.Native/include/open_cv_sharp/xstereo/xstereo.h

typedef struct jyppx_ocv_xstereo_binary_bm jyppx_ocv_xstereo_binary_bm;
typedef struct jyppx_ocv_xstereo_binary_sgbm jyppx_ocv_xstereo_binary_sgbm;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_census_transform(
    const jyppx_ocv_mat* image,
    int kernel_size,
    jyppx_ocv_mat* dist,
    int type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_census_transform_pair(
    const jyppx_ocv_mat* image1,
    const jyppx_ocv_mat* image2,
    int kernel_size,
    jyppx_ocv_mat* dist1,
    jyppx_ocv_mat* dist2,
    int type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_modified_census_transform(
    const jyppx_ocv_mat* image,
    int kernel_size,
    jyppx_ocv_mat* dist,
    int type,
    int t,
    const jyppx_ocv_mat* integral_image);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_modified_census_transform_pair(
    const jyppx_ocv_mat* image1,
    const jyppx_ocv_mat* image2,
    int kernel_size,
    jyppx_ocv_mat* dist1,
    jyppx_ocv_mat* dist2,
    int type,
    int t,
    const jyppx_ocv_mat* integral_image1,
    const jyppx_ocv_mat* integral_image2);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_symetric_census_transform(
    const jyppx_ocv_mat* image,
    int kernel_size,
    jyppx_ocv_mat* dist,
    int type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_symetric_census_transform_pair(
    const jyppx_ocv_mat* image1,
    const jyppx_ocv_mat* image2,
    int kernel_size,
    jyppx_ocv_mat* dist1,
    jyppx_ocv_mat* dist2,
    int type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_star_census_transform(
    const jyppx_ocv_mat* image,
    int kernel_size,
    jyppx_ocv_mat* dist);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_star_census_transform_pair(
    const jyppx_ocv_mat* image1,
    const jyppx_ocv_mat* image2,
    int kernel_size,
    jyppx_ocv_mat* dist1,
    jyppx_ocv_mat* dist2);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_create(
    int num_disparities,
    int block_size,
    jyppx_ocv_xstereo_binary_bm** matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_xstereo_binary_bm_release(
    jyppx_ocv_xstereo_binary_bm* matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_compute(
    jyppx_ocv_xstereo_binary_bm* matcher,
    const jyppx_ocv_mat* left,
    const jyppx_ocv_mat* right,
    jyppx_ocv_mat* disparity);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_sgbm_create(
    int min_disparity,
    int num_disparities,
    int block_size,
    int p1,
    int p2,
    int disp12_max_diff,
    int pre_filter_cap,
    int uniqueness_ratio,
    int speckle_window_size,
    int speckle_range,
    int mode,
    jyppx_ocv_xstereo_binary_sgbm** matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_xstereo_binary_sgbm_release(
    jyppx_ocv_xstereo_binary_sgbm* matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_sgbm_compute(
    jyppx_ocv_xstereo_binary_sgbm* matcher,
    const jyppx_ocv_mat* left,
    const jyppx_ocv_mat* right,
    jyppx_ocv_mat* disparity);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_get_min_disparity(const jyppx_ocv_xstereo_binary_bm* matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_set_min_disparity(jyppx_ocv_xstereo_binary_bm* matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_get_num_disparities(const jyppx_ocv_xstereo_binary_bm* matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_set_num_disparities(jyppx_ocv_xstereo_binary_bm* matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_get_block_size(const jyppx_ocv_xstereo_binary_bm* matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_set_block_size(jyppx_ocv_xstereo_binary_bm* matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_get_speckle_window_size(const jyppx_ocv_xstereo_binary_bm* matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_set_speckle_window_size(jyppx_ocv_xstereo_binary_bm* matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_get_speckle_range(const jyppx_ocv_xstereo_binary_bm* matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_set_speckle_range(jyppx_ocv_xstereo_binary_bm* matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_get_disp12_max_diff(const jyppx_ocv_xstereo_binary_bm* matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_set_disp12_max_diff(jyppx_ocv_xstereo_binary_bm* matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_get_pre_filter_type(const jyppx_ocv_xstereo_binary_bm* matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_set_pre_filter_type(jyppx_ocv_xstereo_binary_bm* matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_get_pre_filter_size(const jyppx_ocv_xstereo_binary_bm* matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_set_pre_filter_size(jyppx_ocv_xstereo_binary_bm* matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_get_pre_filter_cap(const jyppx_ocv_xstereo_binary_bm* matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_set_pre_filter_cap(jyppx_ocv_xstereo_binary_bm* matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_get_texture_threshold(const jyppx_ocv_xstereo_binary_bm* matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_set_texture_threshold(jyppx_ocv_xstereo_binary_bm* matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_get_uniqueness_ratio(const jyppx_ocv_xstereo_binary_bm* matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_set_uniqueness_ratio(jyppx_ocv_xstereo_binary_bm* matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_get_smaller_block_size(const jyppx_ocv_xstereo_binary_bm* matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_set_smaller_block_size(jyppx_ocv_xstereo_binary_bm* matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_get_scalle_factor(const jyppx_ocv_xstereo_binary_bm* matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_set_scalle_factor(jyppx_ocv_xstereo_binary_bm* matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_get_spekle_removal_technique(const jyppx_ocv_xstereo_binary_bm* matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_set_spekle_removal_technique(jyppx_ocv_xstereo_binary_bm* matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_get_use_prefilter(const jyppx_ocv_xstereo_binary_bm* matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_set_use_prefilter(jyppx_ocv_xstereo_binary_bm* matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_get_binary_kernel_type(const jyppx_ocv_xstereo_binary_bm* matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_set_binary_kernel_type(jyppx_ocv_xstereo_binary_bm* matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_get_agregation_window_size(const jyppx_ocv_xstereo_binary_bm* matcher, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_bm_set_agregation_window_size(jyppx_ocv_xstereo_binary_bm* matcher, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_xstereo_binary_sgbm_get_min_disparity(const jyppx_ocv_xstereo_binary_sgbm* matcher, int* value);